# oxidamp

./: .gitignore  Cargo.toml  README.md  examples.ipynb  playground.ipynb
benches/: main.rs
examples/: amplifier.rs  drummachine.rs  metronome.rs  midi-dump.rs  synth.rs
src/: 12AX7.rs  amplifier.rs  biquad.rs  cabsim.rs  dcblocker.rs  delay.rs  drummachine.rs  fir.rs  firstorder.rs  gui.rs  jack.rs  lib.rs  main.rs  metronome.rs  midi.rs  preamp.rs  prelude.rs  reverb.rs  sbuf.rs  siggen.rs  string.rs  tonestack.rs  tubestage.rs  util.rs  voicebox.rs  waveshaper.rs
src/lib23k/: hhc_rock_b.rs  kick_dry_b.rs  sn_wet_b.rs
tools/: tube_transfer.py
