[package]
name = "oxidamp"
version = "0.1.0"
authors = ["Daniel Thompson"]
edition = "2021"
license = "GPL-3.0-or-later"

[dependencies]
base64 = "0.13.0"
clap = { version = "3.0", features = ["derive"] }
cursive = { version = "0.18.0", default-features = false, features = ["crossterm-backend"] }
hound = "3.4.0"
jack = "0.9.2"

[dev-dependencies]
bencher = "0.1.5"
rand = "0.8.5"

[[bench]]
name = "main"
harness = false

[profile.bench]
debug = true
