[package]
name = "oxidamp"
version = "0.1.0"
authors = ["Daniel Thompson"]
edition = "2021"
license = "GPL-3.0-or-later"

[dependencies]
jack = "0.9.2"

[dev-dependencies]
bencher = "0.1.5"
cursive = { version = "0.18.0", default-features = false, features = ["crossterm-backend"] }
rand = "0.8.5"

[[bench]]
name = "main"
harness = false

[profile.bench]
debug = true
